--- a/force-app/main/default/classes/PackageSelectionController.cls
+++ b/force-app/main/default/classes/PackageSelectionController.cls
@@ -4,15 +4,34 @@ public with sharing class PackageSelectionController {
     @AuraEnabled
     public static List<PackageWrapper> getPackages(String oppId) {
         Map<String,List<String>> packageToServiceMap = new Map<String,List<String>>();
+        Decimal discountApplicable=0;
+        Boolean isDiscountInPercent = false;
         if (String.isBlank(oppId)) {
             throw new AuraHandledException('Please link an airport');
         }
         Opportunity opp = [
-            SELECT Id,Service_Airport__c,Sector__c,Service_Type__c,Flight_Type__c
+            SELECT Id,Service_Airport__c,Sector__c,Service_Type__c,Flight_Type__c,AccountId
             FROM Opportunity
             WHERE Id=:oppId
             LIMIT 1
+        ];
+        //check if discount applicable
+        if (opp.AccountId !=null) {
+            List<Discount__c> discountList = [SELECT Id, Discount_Applicable__c, Is_Discount_In_Percentage__c 
+                FROM Discount__c 
+                WHERE Account__c=:opp.AccountId
+                AND From__c <= TODAY 
+                AND To__c >= TODAY 
+                AND Is_Active__c = TRUE 
+                LIMIT 1
             ];
+            if (!discountList.isEmpty() && discountList !=null) {
+                discountApplicable = discountList[0].Discount_Applicable__c;
+                isDiscountInPercent = discountList[0].Is_Discount_In_Percentage__c;
+            }
+        }
+
+
         List<PackageWrapper> packageColumns = new List<PackageWrapper>();
 
         List<Package__mdt> packageRecordList = 
@@ -84,10 +103,10 @@ public with sharing class PackageSelectionController {
             pckg.services = combineService; 
             pckg.childPackageWrapper = adultToChildPriceBookMap;
             pckg.infantPackageWrapper = adultToInfantPriceBookMap;            
-
+            pckg.isDiscountInPercent = isDiscountInPercent;
+            pckg.discountValue = discountApplicable;
             packageColumns.add(pckg);
-        }  
-        System.debug('pack>> '+packageColumns);    
+        }     
         return packageColumns;
     }
 
@@ -118,7 +137,7 @@ public with sharing class PackageSelectionController {
         }*/
 
         List<PricebookEntry> pricebookAddonEntries = [
-            SELECT Id, Product2Id, Product2.Name, Product2.Family, UnitPrice, Pricebook2Id
+            SELECT Id, Product2Id, Product2.Name, Product2.Family, UnitPrice, Pricebook2Id, Product2.Hide_Drop_Terminal__c
             FROM PricebookEntry
             WHERE Pricebook2.IsActive = TRUE
             AND Pricebook2.IsStandard = TRUE
@@ -138,7 +157,8 @@ public with sharing class PackageSelectionController {
             pckg.productId =  pbEntry.Product2Id;
             pckg.pricebookEntryId =  pbEntry.Id; 
             pckg.pickupTerminal = getFlightTerminalInfo(oppId);
-            pckg.dropTerminal = getDropTerminalInfo(oppId);
+            pckg.dropTerminal = pbEntry.Product2.Hide_Drop_Terminal__c ? '' : getDropTerminalInfo(oppId);
+            pckg.hideDropTerminal =  pbEntry.Product2.Hide_Drop_Terminal__c;
             addOnColumns.add(pckg);
         }      
 
@@ -161,41 +181,35 @@ public with sharing class PackageSelectionController {
         }
         @AuraEnabled
         public static String getFlightTerminalInfo(String oppId) {
-            Id terminalId;
             Opportunity opp = [
             SELECT Id,Arriving_Flight_Schedule__c,Departure_Flight_Schedule__c,
-            Departure_Flight_Schedule__r.Departure_Terminal__c,
-            Arriving_Flight_Schedule__r.Arrival_Terminal__c
+            Departure_Flight_Schedule__r.Departure_Terminal__c,Departure_Flight_Schedule__r.Departure_Terminal__r.Code__c,
+            Arriving_Flight_Schedule__r.Arrival_Terminal__c,Arriving_Flight_Schedule__r.Arrival_Terminal__r.Code__c
             FROM Opportunity
             WHERE Id=:oppId
             LIMIT 1
             ];
-            if (opp.Arriving_Flight_Schedule__c !=null) {
-                terminalId = opp.Arriving_Flight_Schedule__r.Arrival_Terminal__c;
-                Terminal__c terminal = [SELECT Id,Code__c from Terminal__c WHERE Id=: terminalId LIMIT 1];    
-                return terminal.Code__c!=null ? terminal.Code__c : '';
-            } else if (opp.Departure_Flight_Schedule__c !=null){
-                terminalId= opp.Departure_Flight_Schedule__r.Departure_Terminal__c;
-                Terminal__c terminal = [SELECT Id,Code__c from Terminal__c WHERE Id=: terminalId LIMIT 1]; 
-                return terminal.Code__c!=null ? terminal.Code__c : ''; 
+            if (opp.Arriving_Flight_Schedule__c !=null && opp.Arriving_Flight_Schedule__r.Arrival_Terminal__c !=null) {
+                return  opp.Arriving_Flight_Schedule__r.Arrival_Terminal__r.Code__c !=null ? opp.Arriving_Flight_Schedule__r.Arrival_Terminal__r.Code__c : '';
+            } else if (opp.Departure_Flight_Schedule__c !=null && opp.Departure_Flight_Schedule__r.Departure_Terminal__c!=null){
+                return  opp.Departure_Flight_Schedule__r.Departure_Terminal__r.Code__c !=null ? opp.Departure_Flight_Schedule__r.Departure_Terminal__r.Code__c : ''; 
             }
             return '';
         }
         @AuraEnabled
         public static String getDropTerminalInfo(String oppId) {
-            Id terminalId;
-            Opportunity opp = [
+            List<Opportunity> oppList = new List<Opportunity>();
+            oppList = [
             SELECT Id,Arriving_Flight_Schedule__c,Departure_Flight_Schedule__c,
-            Departure_Flight_Schedule__r.Departure_Terminal__c,
+            Departure_Flight_Schedule__r.Departure_Terminal__c, Departure_Flight_Schedule__r.Departure_Terminal__r.Code__c,
             Arriving_Flight_Schedule__r.Arrival_Terminal__c
             FROM Opportunity
             WHERE Id=:oppId
+            AND Service_Type__c ='Transit'
             LIMIT 1
             ];
-            if (opp.Departure_Flight_Schedule__c !=null && opp.Departure_Flight_Schedule__r.Departure_Terminal__c!=null){
-                terminalId= opp.Departure_Flight_Schedule__r.Departure_Terminal__c;
-                Terminal__c terminal = [SELECT Id,Code__c from Terminal__c WHERE Id=: terminalId LIMIT 1]; 
-                return terminal.Code__c!=null ? terminal.Code__c : ''; 
+            if (!oppList.isEmpty() && oppList[0].Departure_Flight_Schedule__c !=null && oppList[0].Departure_Flight_Schedule__r.Departure_Terminal__c!=null){
+                return  oppList[0].Departure_Flight_Schedule__r.Departure_Terminal__r.Code__c !=null ? oppList[0].Departure_Flight_Schedule__r.Departure_Terminal__r.Code__c : ''; 
             }
             return '';
         }
@@ -234,6 +248,8 @@ public with sharing class PackageSelectionController {
 
     @AuraEnabled
     public static void savePassengerDetails(List<Map<String, Object>> passengerData, Id opportunityId) {
+
+
         List<Passenger_Details__c> passengerDetailsList = new List<Passenger_Details__c>();
         // Create a Map directly from the query result
         Map<Id, String> opportunityMap = new Map<Id, String>();// Initialize a Map to store Record_Id__c as key and Description__c as value
@@ -248,10 +264,10 @@ public with sharing class PackageSelectionController {
             ORDER BY CreatedDate DESC];
         //Delete existing passengers and create new list if updates are made
         List<Passenger_Details__c> passengersToDelete = [SELECT Id FROM Passenger_Details__c WHERE Opportunity_ID__c=:opportunityId];
-        /*
+        
         if (passengersToDelete!=null && passengersToDelete.size()>0) {
             Delete passengersToDelete;
-        } */
+        } 
         Map<String, String> typeToOliIdMap = new Map<String, String>();
         // Create a map to store lists of passengers by their 'Valid_For' field value
         Map<String, List<Id>> oliMap = new Map<String, List<Id>>();
@@ -334,73 +350,206 @@ public with sharing class PackageSelectionController {
         }
     }
 
-
     // Method to create Opportunity Line Items
     @AuraEnabled
     public static void createOpportunityLineItems(Id opportunityId, List<Map<String, Object>> productDetails, Decimal amount) {
+
+        //delete existing oli if any
+        List<OpportunityLineItem> oliToDelete = [SELECT Id FROM OpportunityLineItem WHERE opportunityId=: opportunityId];
+        Delete oliToDelete;
+        //delete existing transactions if any
+        List<Transaction_History__c > TransactionsToDelete = [SELECT Id FROM Transaction_History__c WHERE Booking_Id__c =: opportunityId];
+        Delete TransactionsToDelete;
         // Create a list to store OpportunityLineItems
         List<OpportunityLineItem> opportunityLineItemsToInsert = new List<OpportunityLineItem>();
-        List<Transaction_History__c> transactionList= new List<Transaction_History__c>();
-        Decimal totalListPrice=0;
+        List<Transaction_History__c> transactionList = new List<Transaction_History__c>();
+        List<PricebookEntry> pbEntry = new List<PricebookEntry>();
+        Decimal totalListPrice = 0;
+        DateTime serviceDateTime;
+        String dateText;
+        String timeText;
+        String combinedDateTimeStr;
 
         // Query Opportunity based on OpportunityId
         Opportunity opp = [
-            SELECT Name
+            SELECT Name,STA_Time__c,STD_Time__c,Date_of_Arrival__c,Date_of_Departure__c,Account.Surcharge_waived_off__c
             FROM Opportunity
-            WHERE Id=:opportunityId
+            WHERE Id = :opportunityId
             LIMIT 1
         ];
 
-        //update opportunity
-        /*
-        List<OpportunityLineItem> loiToDelete = [SELECT Id,Product2Id FROM OpportunityLineItem WHERE OpportunityId =:opportunityId];
-        Delete loiToDelete;
-        */
+        if (opp.STA_Time__c != null) {
+            dateText=opp.Date_of_Arrival__c;
+            timeText=opp.STA_Time__c;
+            // Ensure timeText includes seconds
+            if (timeText.length() == 5) {  // "HH:mm" format
+                timeText += ':00';  // Append ":00" for seconds
+            }
+            combinedDateTimeStr=dateText + ' ' + timeText;
+            serviceDateTime = DateTime.valueOf(combinedDateTimeStr);
+        } else if (opp.STD_Time__c != null) {
+            dateText=opp.Date_of_Departure__c;
+            timeText=opp.STD_Time__c;// Ensure timeText includes seconds
+            if (timeText.length() == 5) {  // "HH:mm" format
+                timeText += ':00';  // Append ":00" for seconds
+            }
+            combinedDateTimeStr=dateText + ' ' + timeText;
+            serviceDateTime = DateTime.valueOf(combinedDateTimeStr);
+        }
+
+        pbEntry = [
+            SELECT Id, Product2Id, Product2.Name, Product2.Family, UnitPrice, Pricebook2Id, List_Price_In_Percentage__c
+            FROM PricebookEntry
+            WHERE Pricebook2.IsActive = true
+            AND Pricebook2.IsStandard = true
+            AND Product2.Family ='Surcharge'
+            LIMIT 1
+        ];
+
         for (Map<String, Object> productDetail : productDetails) {
             // Extract the values from the map
             Id productId = (Id) productDetail.get('productId');
             Id pricebookEntry = (Id) productDetail.get('pricebookEntryId');
             Decimal quantity = (Boolean) productDetail.get('isChild') ? (Decimal) productDetail.get('childCount') : (Decimal) productDetail.get('count');
             Decimal unitPrice = (Decimal) productDetail.get('unitPrice');
-            String pickupTerminal = (String) productDetail.get('pickup');
-            String dropTerminal = (String) productDetail.get('drop'); 
-            
-            for (Integer i=0; i<quantity; i++) {
-                // Create a new Opportunity Line Item
-                OpportunityLineItem oli = new OpportunityLineItem();
-                oli.OpportunityId = opportunityId;
-                oli.Product2Id = productId;
-                oli.Quantity = 1;
-                oli.UnitPrice = unitPrice;
-                oli.PricebookEntryId = pricebookEntry; // Link PricebookEntry to OLI
-                oli.Pickup_Terminal__c = pickupTerminal;
-                oli.Drop_Terminal__c = dropTerminal;
-                oli.Status__c = 'Active';
-                totalListPrice += unitPrice;
-                // Add the OLI to the list
-                opportunityLineItemsToInsert.add(oli);
-            }
-        }
-            //creation of transaction record for booking
-            if(totalListPrice !=0) {
-                Transaction_History__c transactionRec= new Transaction_History__c();
-                transactionRec.Booking_Id__c = opportunityId;
-                transactionRec.List_Price__c = totalListPrice;
-                transactionRec.Name = opp.Name;
-                transactionRec.Transaction_Type__c = 'Debit';
-                
-                transactionList.add(transactionRec);
-            } 
 
-        // Insert the Opportunity Line Items
+            // Safely extract pickup and drop terminals
+            List<String> pickupTerminals = new List<String>();
+            List<String> dropTerminals = new List<String>();
+
+            // Safely extract and cast pickupTerminals
+            if (productDetail.containsKey('pickupTerminals') && productDetail.get('pickupTerminals') != null) {
+                List<Object> tempPickupTerminals = (List<Object>) productDetail.get('pickupTerminals');
+                for (Object obj : tempPickupTerminals) {
+                    pickupTerminals.add((String) obj); // Explicitly cast each item to String
+                }
+            }
+
+            // Safely extract and cast dropTerminals
+            if (productDetail.containsKey('dropTerminals') && productDetail.get('dropTerminals') != null) {
+                List<Object> tempDropTerminals = (List<Object>) productDetail.get('dropTerminals');
+                for (Object obj : tempDropTerminals) {
+                    dropTerminals.add((String) obj); // Explicitly cast each item to String
+                }
+            }
+            // Handle null pickupTerminals and dropTerminals by initializing as empty lists
+            if (pickupTerminals == null) {
+                pickupTerminals = new List<String>();
+            }
+            if (dropTerminals == null) {
+                dropTerminals = new List<String>();
+            }
+
+            // Loop through quantity to handle multiple OLI for each product detail
+                if (Math.max(pickupTerminals.size(), dropTerminals.size()) < 1) {
+                    // Loop through quantity to handle multiple OLI for each product detail
+                    for (Integer i = 0; i < quantity; i++) {
+                        // Create a new Opportunity Line Item for packages
+                        OpportunityLineItem oli = new OpportunityLineItem();
+                        oli.OpportunityId = opportunityId;
+                        oli.Product2Id = productId;
+                        oli.Quantity = 1;
+                        oli.UnitPrice = unitPrice;
+                        oli.PricebookEntryId = pricebookEntry; // Link PricebookEntry to OLI
+                        oli.Status__c = 'Active';
+
+                        totalListPrice += unitPrice;    
+
+                        // Add the OLI to the list
+                        opportunityLineItemsToInsert.add(oli);    
+                    }                
+                }
+                String pickupTerminal ='';
+                String dropTerminal='';
+                for (Integer j = 0; j < Math.max(pickupTerminals.size(), dropTerminals.size()); j++) {
+                    // Ensure we don't access out of bounds in case the arrays are of different lengths
+                    pickupTerminal = (j < pickupTerminals.size()) ? pickupTerminals.get(j) : pickupTerminal;
+                    dropTerminal = (j < dropTerminals.size()) ? dropTerminals.get(j) : dropTerminal;
+
+                    // Create a new Opportunity Line Item for 
+                    OpportunityLineItem oli = new OpportunityLineItem();
+                    oli.OpportunityId = opportunityId;
+                    oli.Product2Id = productId;
+                    oli.Quantity = 1;
+                    oli.UnitPrice = unitPrice;
+                    oli.PricebookEntryId = pricebookEntry; // Link PricebookEntry to OLI
+                    oli.Pickup_Terminal__c = pickupTerminal;
+                    oli.Drop_Terminal__c = dropTerminal;
+                    oli.Status__c = 'Active';
+                    if(!pbEntry.isEmpty() && pbEntry[0].UnitPrice !=null && pbEntry[0].List_Price_In_Percentage__c && !opp.Account.Surcharge_waived_off__c) {
+                        oli.Surcharge_Amount_Applied__c = getSurchargeAmount(serviceDateTime, DateTime.now(),pbEntry[0].UnitPrice, unitPrice,  true);
+                    }
+
+                    totalListPrice += unitPrice;  
+                    // Add the OLI to the list
+                    opportunityLineItemsToInsert.add(oli);
+                }
+
+        }
+
+        // Insert the Opportunity Line Items and Transaction History
         try {
-            insert opportunityLineItemsToInsert;                
+            
+            //logic to create oli for surcharge if not in percentage
+            if (!pbEntry.isEmpty() && pbEntry[0].UnitPrice !=null && !pbEntry[0].List_Price_In_Percentage__c  && !opp.Account.Surcharge_waived_off__c) {
+                if (getSurchargeAmount(serviceDateTime, DateTime.now(),pbEntry[0].UnitPrice, 0,  false) > 0) {
+                    OpportunityLineItem oli = new OpportunityLineItem();
+                    oli.OpportunityId = opportunityId;
+                    oli.Product2Id = pbEntry[0].Product2Id;
+                    oli.Quantity = 1;
+                    oli.UnitPrice = pbEntry[0].UnitPrice;
+                    oli.PricebookEntryId = pbEntry[0].Id; // Link PricebookEntry to OLI
+                    oli.Status__c = 'Active';
+                    opportunityLineItemsToInsert.add(oli);
+                }
+            }
+
+            insert opportunityLineItemsToInsert;
+            // Now that the records are inserted, their Ids are populated
+            for (OpportunityLineItem oli : opportunityLineItemsToInsert) {
+                if (oli.UnitPrice != 0) {
+                    // Create the transaction record for booking
+                    Transaction_History__c transactionRec = new Transaction_History__c();
+                    transactionRec.Booking_Id__c = opportunityId;
+                    transactionRec.List_Price__c = oli.UnitPrice;
+                    transactionRec.Name = opp.Name;
+                    transactionRec.Transaction_Type__c = 'Credit';
+                    transactionRec.Order_Id__c = oli.Id; // link oli with transaction
+                    transactionList.add(transactionRec);
+                }
+            }
+
+            // Finally, insert the transaction history records
             insert transactionList;
         } catch (Exception e) {
             System.debug('Error inserting Opportunity Line Items: ' + e.getMessage());
             throw new AuraHandledException('Error in creating order summary, please show this message to admin');
         }
     }
+
+    //Method for surcharge calculation if in percentage
+    public static Decimal getSurchargeAmount(DateTime serviceDateTime, DateTime bookingDateTime, Decimal surchargeAmountOrPercent, Decimal bookingAmount, Boolean isAmountInPercent) {
+
+        Long hoursDifference = serviceDateTime.getTime() - bookingDateTime.getTime();
+        hoursDifference = hoursDifference / (1000 * 60 * 60);  // Convert milliseconds to hours
+        
+        //get the metadata for surcharge
+        Booking_Validation_Parameters__mdt surchargeMetadataRecord = Booking_Validation_Parameters__mdt.getInstance('ADL_MGZjMjE0M');
+        if (surchargeMetadataRecord != null &&
+            surchargeMetadataRecord.Surcharge_Applicable_Hours_Within__c !=null && 
+            hoursDifference < surchargeMetadataRecord.Surcharge_Applicable_Hours_Within__c) {
+                if (isAmountInPercent) {
+                    return bookingAmount + (bookingAmount * (surchargeAmountOrPercent/ 100));
+                } else {
+                    return surchargeAmountOrPercent;
+                } 
+        } else {
+            return 0;
+        }
+    }
+
+
+
 
     public class PackageWrapper {
         @AuraEnabled
@@ -423,6 +572,10 @@ public with sharing class PackageSelectionController {
         public List<String> services {get;set;}
         @AuraEnabled
         public String packageFamily;
+        @AuraEnabled
+        public Decimal discountValue;
+        @AuraEnabled
+        public Boolean isDiscountInPercent;
 
     }
     public class ChildWrapper {
@@ -450,6 +603,9 @@ public with sharing class PackageSelectionController {
         public String pickupTerminal;
         @AuraEnabled
         public String dropTerminal;
+        @AuraEnabled
+        public Boolean hideDropTerminal;
+
     }
     public class passengerWrapper {
         @AuraEnabled
