--- a/force-app/main/default/classes/MDEN_PdfAttachmentController.cls
+++ b/force-app/main/default/classes/MDEN_PdfAttachmentController.cls
@@ -38,24 +38,24 @@ public with sharing class MDEN_PdfAttachmentController {
     @AuraEnabled
     public static String generateAndSavePDF(String recordId) {
         try {
-            // 🔹 Call VF Page with only `recordId`
+            // Call VF Page with only `recordId`
             PageReference pdfPage = Page.ProformaInvoicePDF;
             pdfPage.getParameters().put('recordId', recordId);
             System.debug('DEBUG: Calling VF Page with recordId: ' + recordId);
 
-            // 🔹 Generate PDF Blob
+            // Generate PDF Blob
             Blob pdfBlob = pdfPage.getContent();
 
-            // 🔹 Save PDF as File in Salesforce
+            // Save PDF as File in Salesforce
             ContentVersion cv = new ContentVersion(
-                Title = 'Performa_Invoice.pdf',
-                PathOnClient = 'Performa_Invoice.pdf',
+                Title = 'Proforma_Invoice.pdf',
+                PathOnClient = 'Proforma_Invoice.pdf',
                 VersionData = pdfBlob,
                 IsMajorVersion = true
             );
             insert cv;
 
-            // 🔹 Attach PDF to Opportunity
+            // Attach PDF to Opportunity
             ContentDocument contentDocument = [SELECT Id FROM ContentDocument WHERE LatestPublishedVersionId = :cv.Id LIMIT 1];
             ContentDocumentLink contentDocumentLink = new ContentDocumentLink();
             contentDocumentLink.ContentDocumentId = contentDocument.Id;
@@ -76,10 +76,12 @@ public with sharing class MDEN_PdfAttachmentController {
     public Opportunity opp { get; set; }
     public Decimal totalAmount { get; set; } 
     public String totalAmountInWords {get; set; }
+    public String formattedTodayDate { get; set; }
     public List<OppLineItemWrapper> oppLineItems { get; set; }
     public List<PassengerWrapper> passengers { get; set; }
-    public FlightDetailsWrapper flightDetails { get; set; }
-    public String formattedTodayDate { get; set; }
+    public List<FlightDetailsWrapper> flightDetails { get; set; }
+    public ServiceDetailsWrapper serviceDetails { get; set; }
+   
 
    
     public MDEN_PdfAttachmentController() {
@@ -88,6 +90,14 @@ public with sharing class MDEN_PdfAttachmentController {
 
         Date todayDate = System.today();
         formattedTodayDate = DateTime.newInstance(todayDate.year(), todayDate.month(), todayDate.day()).format('dd-MMM-yyyy');
+
+        String flightNum;
+        String airline;
+        String terminal;
+        String flightDateTime;
+        String serviceDateTime;
+        String fromAirport;
+        String toAirport;
 
         if (String.isNotBlank(recordId)) {
             try {
@@ -101,14 +111,15 @@ public with sharing class MDEN_PdfAttachmentController {
                         (SELECT Id, Product2.Name, Quantity, UnitPrice, TotalPrice, HSN_HAC__c FROM OpportunityLineItems)
                         FROM Opportunity WHERE Id = :recordId];
 
-                System.debug('✅ Successfully fetched Opportunity record.');
+                System.debug('Successfully fetched Opportunity record.');
 
                 //Process totalAmount
                 AggregateResult[] totalResult = [SELECT SUM(TotalPrice) totalAmount FROM OpportunityLineItem WHERE OpportunityId = :recordId];
                 totalAmount = (totalResult.isEmpty() || totalResult[0].get('totalAmount') == null) ? 0 : (Decimal) totalResult[0].get('totalAmount');
                 totalAmountInWords = NumberToWordsUtil.convertNumberToWords(totalAmount);
 
-                // 🔹 Process Passenger Details
+                
+                //Process Passenger Details
                 passengers = new List<PassengerWrapper>();
                 Integer counter = 1;
                 for (Passenger_Details__c p : opp.Passenger_Details__r) {
@@ -116,7 +127,7 @@ public with sharing class MDEN_PdfAttachmentController {
                     counter++;
                 }
 
-                // 🔹 Process Opportunity Line Items
+                //Process Opportunity Line Items
                 oppLineItems = new List<OppLineItemWrapper>();
                 counter = 1;
                 for (OpportunityLineItem o : opp.OpportunityLineItems) {
@@ -125,32 +136,45 @@ public with sharing class MDEN_PdfAttachmentController {
                 }
 
                 // Process Flight Details
-                String flightNum = opp.Service_Type__c == 'Arrival' ? opp.Flight_Number_Arrival__c : opp.Service_Type__c == 'Departure' ? opp.Flight_Number_Departure__c : '';
-                System.debug('flightNum-->'+flightNum);
-                String flightDate = opp.Service_Type__c == 'Arrival' ? opp.Date_of_Arrival__c : opp.Service_Type__c == 'Departure' ? opp.Date_of_Departure__c  : '';
-                String flightSTA = opp.STA_Time__c;
-                String flightSTD = opp.STD_Time__c;
-                String flightDateTime = opp.Service_Type__c == 'Arrival' ? opp.Date_of_Arrival__c +' '+ flightSTA : opp.Service_Type__c == 'Departure' ? opp.Date_of_Departure__c +' '+ flightSTD : '';
-                String flightSchId = opp.Service_Type__c == 'Arrival' ? opp.Arriving_Flight_Schedule__c : opp.Service_Type__c == 'Departure' ? opp.Departure_Flight_Schedule__c  : '';
-
-                Flight_Detail__c flightDet = [SELECT id, Name, Arrival_Airport__r.Name, Departure_Airport__r.Name, Flight_Number__c, Airline_Id__r.Name 
-                                            FROM Flight_Detail__c 
-                                            WHERE Name = : flightNum order by createdDate desc LIMIT 1];
-
-                Flight_Schedule__c flightSch = [SELECT id, Name, Flight_Date__c, STA__c, STD__c, Flight_Detail__r.Name, Arrival_Terminal__r.Name, Departure_Terminal__r.Name 
+                Map<Id, Flight_Schedule__c> flightSchMap = new Map<Id, Flight_Schedule__c>([SELECT id, Name,Flight_Detail__r.Airline_Id__c, Flight_Detail__r.Airline_Id__r.Airline_Name__c, Arrival_Terminal__r.Name, Departure_Terminal__r.Name 
                                             FROM Flight_Schedule__c 
-                                            WHERE Id =: flightSchId LIMIT 1];
+                                            WHERE Id =: opp.Arriving_Flight_Schedule__c OR Id =: opp.Departure_Flight_Schedule__c  ]);
 
-                String airline = flightDet !=null && flightDet.Airline_Id__c!= null ? flightDet.Airline_Id__r.Name : null ;
-                String terminal = opp.Service_Type__c == 'Arrival' ? flightSch.Arrival_Terminal__r.Name : opp.Service_Type__c == 'Departure' ? flightSch.Departure_Terminal__r.Name  : '';
+                flightDetails = new List<FlightDetailsWrapper>();
+                if(opp.Arriving_Flight_Schedule__c != null){
+                    flightNum = opp.Flight_Number_Arrival__c;
+                    flightDateTime = opp.Date_of_Arrival__c +' '+ opp.STA_Time__c;
+                    airline =  flightSchMap.get(opp.Arriving_Flight_Schedule__c).Flight_Detail__r.Airline_Id__c != null ? flightSchMap.get(opp.Arriving_Flight_Schedule__c).Flight_Detail__r.Airline_Id__r.Airline_Name__c : '';
+                    terminal = flightSchMap.get(opp.Arriving_Flight_Schedule__c).Arrival_Terminal__r.Name;
+                    flightDetails.add(new FlightDetailsWrapper(flightNum, flightDateTime, airline, terminal));
 
-                flightDetails = new FlightDetailsWrapper(flightNum, flightDateTime, airline, terminal);
+                    fromAirport = opp.Departure_Airport__c;
+                    toAirport = opp.Service_Airport__c;
+                    if(opp.Service_Type__c == 'Transit' || opp.Service_Type__c == 'Arrival')
+                    serviceDateTime = opp.Date_of_Arrival__c +' '+ opp.Arrival_Service_Time__c;
+                }
+                 if(opp.Departure_Flight_Schedule__c != null){
+                    flightNum = opp.Flight_Number_Departure__c;
+                    flightDateTime = opp.Date_of_Departure__c +' '+ opp.STD_Time__c;
+                    airline =  flightSchMap.get(opp.Departure_Flight_Schedule__c).Flight_Detail__r.Airline_Id__c != null ? flightSchMap.get(opp.Departure_Flight_Schedule__c).Flight_Detail__r.Airline_Id__r.Airline_Name__c : '';
+                    terminal = flightSchMap.get(opp.Departure_Flight_Schedule__c).Departure_Terminal__r.Name;
+                    flightDetails.add(new FlightDetailsWrapper(flightNum, flightDateTime, airline, terminal));
+
+                    fromAirport = opp.Service_Airport__c;
+                    toAirport = opp.Arriving_Airport__c;
+                    if(opp.Service_Type__c == 'Departure')
+                    serviceDateTime = opp.Date_of_Departure__c +' '+ opp.Departure_Service_Time__c;
+                }
+
+                //Process Service Details
+                serviceDetails = new ServiceDetailsWrapper(serviceDateTime, String.valueof(opp.CreatedDate), opp.Service_Airport__c, opp.Flight_Type__c, fromAirport, toAirport);
+                
             
             } catch (Exception e) {
-                System.debug('⚠️ ERROR: Failed to fetch data in VF Controller - ' + e.getMessage());
+                System.debug('ERROR: Failed to fetch data in VF Controller - ' + e.getMessage());
             }
         } else {
-            System.debug('⚠️ ERROR: No recordId found.');
+            System.debug('ERROR: No recordId found.');
         }
     }
 
@@ -189,6 +213,25 @@ public with sharing class MDEN_PdfAttachmentController {
             this.flightDateTime = flightDateTime;
             this.airline = airline;
             this.terminal = terminal;
+        }
+    }
+
+    // Service Details Wrapper class
+    public class ServiceDetailsWrapper{
+        public String serviceDateTime { get; set; }
+        public String bookingDateTime { get; set; }
+        public String serviceAirport { get; set; }
+        public String sectorOfTravel { get; set; }
+        public String fromAirport { get; set; }
+        public String toAirport { get; set; }
+
+        public ServiceDetailsWrapper(String serviceDateTime, String bookingDateTime, String serviceAirport, String sectorOfTravel, String fromAirport, String toAirport) {
+            this.serviceDateTime = serviceDateTime;
+            this.bookingDateTime = bookingDateTime;
+            this.serviceAirport = serviceAirport;
+            this.sectorOfTravel = sectorOfTravel;
+            this.fromAirport = fromAirport;
+            this.toAirport = toAirport;
         }
 
     }
